@@ -6,12 +6,14 @@
 
     <groupId>dev.langchain4j</groupId>
     <artifactId>jlama-examples</artifactId>
-    <version>0.33.0</version>
+    <version>1.7.1-beta14</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <logback.version>1.5.6</logback.version>
+        <jlama.version>0.8.3</jlama.version>
     </properties>
 
     <dependencies>
@@ -19,7 +21,13 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-jlama</artifactId>
-            <version>0.33.0</version>
+            <version>1.7.1-beta14</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.tjake</groupId>
+                    <artifactId>jlama-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Add native jlama bindings -->
@@ -27,15 +35,31 @@
             <groupId>com.github.tjake</groupId>
             <artifactId>jlama-native</artifactId>
             <classifier>${os.detected.classifier}</classifier>
-            <version>0.2.1</version>
+            <version>${jlama.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.tjake</groupId>
+            <artifactId>jlama-core</artifactId>
+            <version>${jlama.version}</version>
         </dependency>
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
-            <version>0.33.0</version>
+            <version>1.7.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -43,7 +67,7 @@
             <extension>
                 <groupId>kr.motd.maven</groupId>
                 <artifactId>os-maven-plugin</artifactId>
-                <version>1.7.0</version>
+                <version>1.7.1</version>
             </extension>
         </extensions>
         <plugins>
@@ -56,6 +80,18 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>functions</id>
+                        <configuration>
+                            <arguments>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>--add-modules=jdk.incubator.vector</argument>
+                                <argument>--enable-native-access=ALL-UNNAMED</argument>
+                                <argument>JlamaAiFunctionCallingExamples$Payment_Data_From_AiServices</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>rag</id>
                         <configuration>
                             <arguments>
@@ -63,7 +99,6 @@
                                 <classpath/>
                                 <argument>--add-modules=jdk.incubator.vector</argument>
                                 <argument>--enable-native-access=ALL-UNNAMED</argument>
-                                <argument>--enable-preview</argument>
                                 <argument>JlamaBasicRagEmbedExamples$Chat_Story_From_My_Document</argument>
                             </arguments>
                         </configuration>
